--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ html, body {
 }
 .page.active { transform: translateX(-100%); visibility: visible; }
 
-/* INITIAL LOADING SCREEN (First 2 Seconds) */
+/* INITIAL LOADING SCREEN */
 #introLoading { 
     position: fixed; top: 0; left: 0; width: 100%; height: 100%;
     background: #1a1a2e; z-index: 1000; display: flex; 
@@ -59,6 +59,7 @@ h1 { font-size: 52px; color: #ff8fb1; margin-bottom: 20px; letter-spacing: 4px; 
 
 .fs-toggle { color: #ffc2d1; font-size: 12px; margin-bottom: 20px; text-decoration: underline; cursor: pointer; }
 .valentine-msg { color: #ffc2d1; font-size: 18px; line-height: 1.5; margin-bottom: 30px; }
+.wiggle-container { display: inline-block; margin-top: 10px; }
 .wiggle { display: inline-block; animation: wiggleAnim 0.3s infinite alternate ease-in-out; color: #ff4d6d; font-size: 24px; font-weight: bold; }
 @keyframes wiggleAnim { from { transform: translateY(0); } to { transform: translateY(-8px); } }
 
@@ -87,7 +88,6 @@ h1 { font-size: 52px; color: #ff8fb1; margin-bottom: 20px; letter-spacing: 4px; 
 .popup { position: absolute; font-size: 30px; color: #ffeb3b; text-shadow: 2px 2px 0 #000; pointer-events: none; z-index: 60; animation: floatUp 0.8s forwards; }
 .flash { animation: blink 0.1s infinite; }
 @keyframes blink { 0% { opacity: 1; } 50% { opacity: 0.2; } 100% { opacity: 1; } }
-@keyframes screenShake { 0%, 100% { transform: translateX(0); } 25% { transform: translateX(-10px); } 75% { transform: translateX(10px); } }
 @keyframes floatUp { 0% { transform: translateY(0); opacity: 1; } 100% { transform: translateY(-50px); opacity: 0; } }
 </style>
 </head>
@@ -110,10 +110,18 @@ h1 { font-size: 52px; color: #ff8fb1; margin-bottom: 20px; letter-spacing: 4px; 
     <h2 style="color:white; margin-top:0;">Hey Baby, Happy Valentines Day!!!!</h2>
     <p>I know this is your first valentines having a valentine (me, hehe) so I wanted to make something special so you can remember this day whenever u get bored. It's not much but I hope you have fun!!!!!</p>
     
-    <div>
+    <div class="wiggle-container">
       <span class="wiggle" style="animation-delay: 0s;">I</span>
       <span class="wiggle" style="animation-delay: 0.1s;">love</span>
       <span class="wiggle" style="animation-delay: 0.2s;">youuu!!</span>
+    </div><br>
+    <div class="wiggle-container">
+      <span class="wiggle" style="animation-delay: 0.3s;">Te</span>
+      <span class="wiggle" style="animation-delay: 0.4s;">Amo!!!!!!!</span>
+    </div><br>
+    <div class="wiggle-container">
+      <span class="wiggle" style="animation-delay: 0.5s;">Volim</span>
+      <span class="wiggle" style="animation-delay: 0.6s;">te!!!!!!!!!!</span>
     </div>
   </div>
   <div class="play-btn" id="startBtnGame">START</div>
@@ -162,14 +170,12 @@ h1 { font-size: 52px; color: #ff8fb1; margin-bottom: 20px; letter-spacing: 4px; 
     };
 
     let playerX = window.innerWidth/2-45, targetX = playerX;
-    let score=0, health=3, combo=0, isFever=false, isImmune=false, isGameOver=false;
+    let score=0, health=3, isGameOver=false;
     let fallingItems=[], clouds=[], speedFall=4, spawnInterval;
 
-    // --- INITIAL LOADING TRANSITION ---
     window.addEventListener('load', () => {
         setTimeout(() => {
             const intro = document.getElementById('introLoading');
-            // Particle Burst
             for(let i=0; i<20; i++) {
                 const p = document.createElement('div');
                 p.className = 'particle'; p.innerHTML = "❤️";
@@ -184,13 +190,9 @@ h1 { font-size: 52px; color: #ff8fb1; margin-bottom: 20px; letter-spacing: 4px; 
         }, 2000);
     });
 
-    // --- AUDIO WARMUP LOGIC ---
     function primeAudio() {
         Object.values(snd).forEach(a => {
-            if(a) {
-                a.muted = true;
-                a.play().then(() => { a.pause(); a.currentTime = 0; a.muted = false; }).catch(()=>{});
-            }
+            if(a) { a.muted = true; a.play().then(() => { a.pause(); a.currentTime = 0; a.muted = false; }).catch(()=>{}); }
         });
     }
 
@@ -205,14 +207,11 @@ h1 { font-size: 52px; color: #ff8fb1; margin-bottom: 20px; letter-spacing: 4px; 
         b.addEventListener('touchend', (e) => { e.preventDefault(); fn(); });
     };
 
-    // --- BUTTON CLICKS ---
     setupBtn('playBtnTitle', () => {
-        primeAudio(); // Initial nudge for browser
+        primeAudio();
         snd.btn.play().catch(()=>{});
-        // Start Note Music
         setTimeout(() => {
-            snd.note.volume = 1;
-            snd.note.play().catch(e => console.log("Note blocked"));
+            snd.note.volume = 1; snd.note.play().catch(()=>{});
             slideTo("notePage");
         }, 100);
     });
@@ -220,10 +219,7 @@ h1 { font-size: 52px; color: #ff8fb1; margin-bottom: 20px; letter-spacing: 4px; 
     setupBtn('startBtnGame', () => {
         const btn = document.getElementById('startBtnGame');
         btn.innerText = "LOADING...";
-        
-        // Final warm up for game sounds
         primeAudio(); 
-
         setTimeout(() => {
             btn.innerText = "START";
             if(snd.note) snd.note.pause();
@@ -231,12 +227,11 @@ h1 { font-size: 52px; color: #ff8fb1; margin-bottom: 20px; letter-spacing: 4px; 
             snd.game.play().catch(()=>{});
             slideTo("gamePage");
             initGame();
-        }, 1000); // 1 second "loader" on the start button
+        }, 1000);
     });
 
     setupBtn('retryBtn', () => {
-        snd.game.currentTime = 0;
-        snd.game.play().catch(()=>{});
+        snd.game.currentTime = 0; snd.game.play().catch(()=>{});
         slideTo("gamePage");
         initGame();
     });
@@ -246,13 +241,12 @@ h1 { font-size: 52px; color: #ff8fb1; margin-bottom: 20px; letter-spacing: 4px; 
         if (!document.fullscreenElement) doc.requestFullscreen?.() || doc.webkitRequestFullscreen?.();
     });
 
-    // --- GAME ENGINE ---
     const playerEl = document.getElementById("player");
     const gameContainer = document.getElementById("game");
     playerEl.style.backgroundImage = `url(${ASSETS.player})`;
 
     function initGame(){
-      score=0; health=3; combo=0; isGameOver=false; speedFall=4;
+      score=0; health=3; isGameOver=false; speedFall=4;
       document.getElementById("scoreDisp").textContent=0;
       updateHealthUI();
       fallingItems.forEach(i=>i.el.remove()); fallingItems=[];
@@ -291,12 +285,10 @@ h1 { font-size: 52px; color: #ff8fb1; margin-bottom: 20px; letter-spacing: 4px; 
       if(!isGameOver && document.getElementById("gamePage").classList.contains("active")){
         playerX += (targetX - playerX) * 0.15;
         playerEl.style.left = playerX + "px";
-
         for(let i=fallingItems.length-1; i>=0; i--){
           let itm = fallingItems[i];
           itm.y += speedFall; itm.el.style.top = itm.y + "px";
           const iR = itm.el.getBoundingClientRect(), pR = playerEl.getBoundingClientRect();
-
           if(iR.bottom > pR.top + 20 && iR.top < pR.bottom - 10 && iR.left < pR.right - 20 && iR.right > pR.left + 20){
             if(itm.type === "bomb") { 
                 health--; updateHealthUI(); snd.hurt.play().catch(()=>{}); 
@@ -309,9 +301,7 @@ h1 { font-size: 52px; color: #ff8fb1; margin-bottom: 20px; letter-spacing: 4px; 
                 speedFall += 0.02;
             }
             itm.el.remove(); fallingItems.splice(i,1);
-          } else if(itm.y > window.innerHeight) {
-            itm.el.remove(); fallingItems.splice(i,1);
-          }
+          } else if(itm.y > window.innerHeight) { itm.el.remove(); fallingItems.splice(i,1); }
         }
       }
       requestAnimationFrame(update);
